[gd_scene load_steps=19 format=3 uid="uid://b1phcfq8ugp1"]

[ext_resource type="Script" uid="uid://dyp1c3w3r6ivu" path="res://main/main.gd" id="1_0i4oc"]
[ext_resource type="Script" uid="uid://bs2rvlnxas6f5" path="res://Procedural Generation/TerrainGeneration.gd" id="2_bsumw"]
[ext_resource type="Script" uid="uid://d1fgwrejxjecb" path="res://Procedural Generation/terrain_editor.gd" id="3_fwcvl"]
[ext_resource type="PackedScene" uid="uid://cpliy7cur5dlm" path="res://Ball/Ball.tscn" id="5_73k8k"]
[ext_resource type="PackedScene" uid="uid://dvuyvxo73o3ou" path="res://Goal/GoalDetector.tscn" id="6_5xyti"]
[ext_resource type="Script" uid="uid://d3pj55mw2jk1k" path="res://main/HockeyGoals.gd" id="8_0i4oc"]
[ext_resource type="PackedScene" uid="uid://ccvq3f0fbtwcw" path="res://ScoreManager/ScoreManager.tscn" id="9_0i4oc"]
[ext_resource type="PackedScene" uid="uid://d0cw6utfkuysq" path="res://FieldLines/FieldLinesDynamic.tscn" id="9_4hmqs"]
[ext_resource type="PackedScene" uid="uid://hhgmst8lx8ua" path="res://FieldLines/RinkWalls.tscn" id="9_bsumw"]
[ext_resource type="PackedScene" uid="uid://eyve4dhb0hn7" path="res://GoalOverlay.tscn" id="10_73k8k"]
[ext_resource type="Script" uid="uid://q5aau2vkm2be" path="res://main/ScoreLabel.gd" id="10_bsumw"]
[ext_resource type="Script" uid="uid://cgk3x2gs044ha" path="res://Camera/EditorCamera.gd" id="10_piupu"]
[ext_resource type="Script" uid="uid://b0u5nbb15qyqn" path="res://main/HelpUI.gd" id="12_fwcvl"]
[ext_resource type="Script" uid="uid://u4ritpjdhwlo" path="res://main/PauseMenu.gd" id="13_na0o7"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ig7tw"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_73k8k"]

[sub_resource type="Sky" id="Sky_5xyti"]
sky_material = SubResource("ProceduralSkyMaterial_73k8k")

[sub_resource type="Environment" id="Environment_ig7tw"]
background_mode = 2
sky = SubResource("Sky_5xyti")
tonemap_mode = 2
ssao_enabled = true
glow_enabled = true

[node name="main" type="Node3D"]
script = ExtResource("1_0i4oc")

[node name="TerrainGeneration" type="Node3D" parent="."]
script = ExtResource("2_bsumw")
size_width = 88
edit_height = 2.0
noise = SubResource("FastNoiseLite_ig7tw")
quads_x = 8
forbidden_quads = Array[int]([105, 104, 103, 116, 115, 114, 39, 38, 37, 28, 27, 26])

[node name="TerrainEditor" type="Node3D" parent="." node_paths=PackedStringArray("terrain")]
script = ExtResource("3_fwcvl")
terrain = NodePath("../TerrainGeneration")

[node name="BallNode" parent="." instance=ExtResource("5_73k8k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mass = 0.467

[node name="FieldLinesDynamic" parent="." node_paths=PackedStringArray("terrain") instance=ExtResource("9_4hmqs")]
terrain = NodePath("../TerrainGeneration")

[node name="HockeyGoalLeft" type="Node3D" parent="."]
script = ExtResource("8_0i4oc")
team = 1

[node name="HockeyGoalRight" type="Node3D" parent="."]
script = ExtResource("8_0i4oc")

[node name="RinkWalls" parent="." groups=["walls"] instance=ExtResource("9_bsumw")]

[node name="GoalDetectorLeft" parent="." instance=ExtResource("6_5xyti")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, -35.5)

[node name="GoalDetectorRight" parent="." instance=ExtResource("6_5xyti")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 35.5)
team_name = "Team B"

[node name="ScoreManager" parent="." instance=ExtResource("9_0i4oc")]

[node name="GoalOverlay" parent="." instance=ExtResource("10_73k8k")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.035
offset_bottom = 0.3199997
grow_horizontal = 2
theme_override_font_sizes/font_size = 26
horizontal_alignment = 1
script = ExtResource("10_bsumw")

[node name="EditorCameraRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 40, 20)

[node name="EditorCamera" type="Camera3D" parent="EditorCameraRoot"]
transform = Transform3D(1, 0, 0, 0, 0.49999997, 0.86602545, 0, -0.86602545, 0.49999997, 0, 0, 0)
script = ExtResource("10_piupu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.11453849, 0.41783294, -0.90127504, -0.077132314, 0.90076643, 0.42739955, 0.9904199, 0.11847113, -0.070944026, -90.21393, 20.400438, 2.0428429)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ig7tw")

[node name="HelpUI" type="CanvasLayer" parent="."]
script = ExtResource("12_fwcvl")

[node name="HelpButton" type="Button" parent="HelpUI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_bottom = 40.0
grow_horizontal = 0
focus_mode = 0
text = "Pause"

[node name="PauseMenu" type="Control" parent="HelpUI"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("13_na0o7")

[node name="HelpPanel" type="Panel" parent="HelpUI/PauseMenu"]
layout_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HelpUI/PauseMenu/HelpPanel"]
layout_mode = 0
offset_right = 339.0
offset_bottom = 374.0
alignment = 1

[node name="CloseButton" type="Button" parent="HelpUI/PauseMenu/HelpPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "❌"
alignment = 2
icon_alignment = 2

[node name="HelpLabel" type="Label" parent="HelpUI/PauseMenu/HelpPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "PAUSE"
horizontal_alignment = 1

[node name="RichTextLabel" type="Label" parent="HelpUI/PauseMenu/HelpPanel/VBoxContainer"]
layout_mode = 2
text = "Controls:
• hold right click + mouse: Rotate Camera
• WASD: move
• Space: fly up
• Shift: fly down
• Linksklick: Select quad
• Q: Terrain up
• E: Terrain down
"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HelpUI/PauseMenu/HelpPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResetButton" type="Button" parent="HelpUI/PauseMenu/HelpPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="ForfeitButton" type="Button" parent="HelpUI/PauseMenu/HelpPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Forfeit"

[node name="VoteLabel" type="Label" parent="HelpUI/PauseMenu/HelpPanel/VBoxContainer"]
layout_mode = 2

[node name="ForfeitConfirm" type="ConfirmationDialog" parent="HelpUI/PauseMenu"]
oversampling_override = 1.0
size = Vector2i(427, 100)
ok_button_text = "Forfeit?"
dialog_text = "Do you really want to Forfeit? You will lose this game."
